# Copyright (C) 2004 Robin Hugh Johnson <robbat2@orbis-terrarum.net>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

bin_PROGRAMS = filelist-order
sbin_PROGRAMS = readahead-list
filelist_order_SOURCES = filelist-order.cxx
readahead_list_SOURCES = readahead-list.c

AM_CFLAGS = -Wall -W -Wextra
AM_CFLAGS += -ggdb3
AM_CXXFLAGS = $(CFLAGS)
DEFAULT_INCLUDES = -I/usr/src/linux/include
